# docuchat

./: FEATURE_Ticket_list.md  PRD.md  README.md  TechinalArchitectureDoc.md
backend/: .env.example  .gitignore  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt  scripts.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: __init__.py  dependencies.py  main.py
backend/app/api/: chat.py  documents.py  sessions.py  upload.py
backend/app/core/: auth.py  config.py  exceptions.py  handlers.py  logging.py  middleware.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  citation.py  conversation.py  document.py  message.py  session.py
backend/app/notebook/: test.ipynb
backend/app/repositories/: __init__.py  citation_repository.py  conversation_repository.py  document_repository.py  message_repository.py  session_repository.py
backend/app/schemas/: document.py  errors.py  session.py  websocket.py
backend/app/services/: chat_service.py  chunking.py  conversation_memory.py  embeddings.py  indexing_service.py  pdf_parser.py  pinecone_service.py  retrieval.py  topic_chat.py
backend/app/utils/: filename.py
backend/app/websocket/: chat.py  manager.py
backend/app/workers/: indexing_worker.py
frontend/: package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/chat/: layout.tsx
frontend/components/chat/: chat-workspace.tsx
