[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "langchain>=1.3.3",
    "langchain-community>=0.4.2",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.2.2",
    "pageindex>=0.2.8",
    "pinecone-client>=6.0.0",
    "pydantic>=2.13.4",
    "pypdf>=6.12.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.30",
    "sse-starlette>=3.4.4",
    "uvicorn[standard]>=0.48.0",
]
