[project]
name = "docuchat-backend"
version = "1.0.0"
description = "Production RAG backend for DocuChat PDF Q&A"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.0",
    "langchain>=0.3.0",
    "langchain-openrouter>=0.2.3",
    "langchain-text-splitters>=0.3.0",
    "pinecone[asyncio]>=5.0.0",
    "pymupdf>=1.25.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.20",
    "sqlalchemy[asyncio]>=2.0.36",
    "structlog>=24.4.0",
    "uvicorn[standard]>=0.34.0",
    "langchain-groq>=1.1.2",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.14.0",
    "ruff>=0.9.0",
    "types-python-dateutil>=2.9.0",
]

[project.scripts]
docuchat = "uvicorn:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["fitz.*", "pinecone.*", "langchain_groq.*", "openrouter.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
